<resources>
    <string name="app_name">Simmons Window Cleaning</string>
    <string name="welcome">Welcome!</string>
    <string name="new_user">New User</string>
    <string name="existing_user">Existing User</string>
    <string name="simmons_window_cleaning">Simmons Window Cleaning</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm">Confirm</string>
    <string name="request_service">Request Service</string>
    <string name="file_complaint">File Complaint</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="temp_value">TEMP VALUE</string>
    <string name="job_address">Job Address:</string>
    <string name="address">Address</string>
    <string name="windows">Windows</string>
    <string name="gutters">Gutters</string>
    <string name="siding">Siding</string>
    <string name="chandelier">Chandelier</string>
    <string name="leaf_removal">Leaf Removal</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account_settings">Account Settings: </string>
    <string name="update_username">Update Username: </string>
    <string name="new_username">New Username</string>
    <string name="update_name">Update Name: </string>
    <string name="new_name">New Name</string>
    <string name="update_address">Update Address: </string>
    <string name="new_address">New Address</string>
    <string name="new_number">New Number</string>
    <string name="update_email">Update Email: </string>
    <string name="new_email">New Email</string>
    <string name="close">Close</string>
    <string name="update_number">Update Number:</string>
    <string name="title_activity_about_us">aboutUs</string>
    <string name="previous">Previous</string>
    <string name="services_you_requested">Services You Requested:</string>
    <string name="click_on_a_service_to_view_more_details">Click on a Service to View more Details.</string>
    <string name="other">Other</string>
    <string name="what_service_would_you_like_done">What Service would you like done?</string>
    <string name="enter_service">Enter Service</string>
    <string name="final_project_for_cmpsc_475">FInal Project for CMPSC-475</string>
    <string name="done_by_david_simmons">Done by David Simmons</string>
    <string name="service">Service: </string>
    <string name="description">Description: </string>
    <string name="service_description">Service Description</string>

    <string-array name="services_requested">
        <item>Windows</item>
        <item>Gutters</item>
        <item>Siding</item>
        <item>Chandelier</item>
        <item>Leaf Removal</item>
        <item>Other</item>
    </string-array>
    <string-array name="services_requested_description">
        <item>Will clean all accessible windows that do not put us in harms way.</item>
        <item>Will clean out all of the gutters on the job (Unclog any of the drains and path to them).</item>
        <item>Will scrub the siding of your house removing all dirt/mold/moss/etc.</item>
        <item>MUST BE HOME: Will clean whichever chandeliers you want cleaned in your home.</item>
        <item>Will Rake your yard and remove the leaves from the premises.</item>
        <item>Will try to accommodate your request as best we can.</item>
    </string-array>

</resources>