<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUser"
    android:background="@drawable/backgroundimage">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/activity_new_user_username_editText"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:hint="@string/enter_username"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/activity_new_user_password_editText"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/activity_new_user_confirm_password_editText"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/activity_new_user_Name"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:hint="@string/enter_name"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/activity_new_user_Address"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:hint="@string/enter_address"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/activity_new_user_PhoneNumber"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/activity_new_user_Email"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/activity_new_user_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/sky_blue"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="SmallSp"
            android:onClick="newUserConfirmBtn"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>