<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage"
    android:background="@drawable/backgroundimage">

    <TextView
        android:id="@+id/homepage_welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_welcome_textView"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/requestService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_service"
            android:layout_margin="10dp"
            android:backgroundTint="@color/sky_blue"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_complaint"
            android:layout_margin="10dp"
            android:backgroundTint="@color/sky_blue"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        >

        <Button
            android:id="@+id/signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_margin="10dp"
            android:backgroundTint="@color/sky_blue"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/aboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:layout_margin="10dp"
            android:backgroundTint="@color/sky_blue"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/homepage_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help"
            android:contentDescription="@string/temp_value"
            android:layout_margin="10dp"
            android:backgroundTint="@color/sky_blue"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>