<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundimage"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <TextView
        android:id="@+id/activity_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        android:textSize="50sp"
        android:textColor="@color/black"
        />


    <EditText
        android:id="@+id/activity_login_email_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:background="@color/sky_blue"
        android:gravity="center"
        android:hint="@string/enter_username"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_login_password_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:background="@color/sky_blue"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/activity_login_loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:backgroundTint="@color/sky_blue"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:onClick="loginLoginBtn"
        android:layout_marginBottom="25dp"
        />
        <ProgressBar
            android:id="@+id/activity_login_progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:onClick="forgotPassword"/>

 </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>